--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+# Streamlit
 streamlit==1.51.0
+
+# TensorFlow compatible with Python 3.12
 tensorflow==2.18.0
-numpy==1.24.4
+
+# NumPy matching TensorFlow requirement
+numpy==1.26.1
+
+# OpenCV for image processing
 opencv-python==4.8.1.78
+
+# Pillow for image loading
 Pillow==10.0.0
+
+# gdown to download files from Google Drive
+gdown==4.7.1
 
 
